--- a/app/views/redis_web_manager/dashboard/index.html.erb
+++ b/app/views/redis_web_manager/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="dashboard-container">
   <%= render 'redis_web_manager/shared/status' %>
   <div class="row my-4">
     <div class="col-sm-12 col-md-9">
